// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServerRouteTrigger resolver resolution (integration) by legacy universalIdentifier refuses to dispatch once a foreign workspace claims the same identifier 1`] = `
{
  "body": {
    "code": "LOGIC_FUNCTION_NOT_FOUND",
    "error": "Error",
    "messages": [
      "Server resolver function 9e0f1a2b-3c4d-4e5f-8a6b-7c8d9e0f1a2b not found",
    ],
    "statusCode": 404,
  },
  "status": 404,
}
`;

exports[`ServerRouteTrigger resolver resolution (integration) by primary key answers 404 for an id that resolves to nothing 1`] = `
{
  "body": {
    "code": "LOGIC_FUNCTION_NOT_FOUND",
    "error": "Error",
    "messages": [
      "Server resolver function 11111111-1111-4111-8111-111111111111 not found",
    ],
    "statusCode": 404,
  },
  "status": 404,
}
`;

exports[`ServerRouteTrigger resolver resolution (integration) by primary key rejects the id of a copy installed in a workspace that does not own the app 1`] = `
{
  "body": {
    "code": "LOGIC_FUNCTION_NOT_FOUND",
    "error": "Error",
    "messages": [
      "Server resolver function <installed copy id> not found",
    ],
    "statusCode": 404,
  },
  "status": 404,
}
`;
